notejam/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notejam-app
  namespace: notejam
  labels:
    app: notejam
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notejam
  template:
    metadata:
      labels:
        app: notejam
    spec:
      containers:
        - name: notejam-app
          image: lovepreet7452/notejam-server:latest # Correct image for the application
          ports:
            - containerPort: 3000
