notejam/k8s/notejam-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notejam-deployment
  namespace: notejam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notejam
  template:
    metadata:
      labels:
        app: notejam
    spec:
      containers:
      - name: notejam
        image: lovepreet7452/notejam-server:latest
        ports:
        - containerPort: 3000
