notejam/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notejam-ingress
  namespace: notejam
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: notejam.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notejam
                port:
                  number: 3000
