notejam/k8s/notejam-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notejam-ingress
  namespace: notejam
spec:
  rules:
  - host: notejam.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notejam-service
            port:
              number: 3000
