notejam/k8s/allow-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: kubernetes-dashboard
spec:
  podSelector: {}
  ingress:
  - {}
